--- a/main.css
+++ b/main.css
@@ -1,1 +1,18 @@
+body {
+  font-family: arial;
+  background: #f06d06;
+  color: white;
+  text-align: center
+}
 
+h2{
+  font-family: italic;
+}
+
+h1{
+  font-family:italic;
+}
+
+p {
+  font-family:oblique;
+}
